fix: Compatible with older Moonlight certifications (#179)
* merge:合并官方代码

* fix: 无法获取PIN设备列表

* fix: 无法获取PIN设备列表

* fix: too many info log

* fix: too many info log

* fix: too many info log

* fix: too many info log

* fix: Compatible with older Moonlight certifications

* fix: Compatible with older Moonlight certifications

--- a/src_assets/common/assets/web/public/assets/locale/bg.json
+++ b/src_assets/common/assets/web/public/assets/locale/bg.json
@@ -367,7 +367,9 @@
     "wan_encryption_mode": "Режим на шифроване в WAN",
     "wan_encryption_mode_1": "Включено за поддържаните клиенти (по подразбиране)",
     "wan_encryption_mode_2": "Задължително за всички клиенти",
-    "wan_encryption_mode_desc": "Това определя дали да се използва шифроване при излъчване през Интернет. Шифроването може да намали производителността на излъчването, особено при не особено мощни сървъри и клиенти."
+    "wan_encryption_mode_desc": "Това определя дали да се използва шифроване при излъчване през Интернет. Шифроването може да намали производителността на излъчването, особено при не особено мощни сървъри и клиенти.",
+    "close_verify_safe": "Безопасно удостоверяване, съвместимо с стари клиенти",
+    "close_verify_safe_desc": "Старите клиенти може да не могат да се свържат с Sunshine, моля, изключете тази опция или актуализирайте клиента"
   },
   "index": {
     "description": "Sunshine е сървър за собствено поточно предаване на игри, предназначен за ползване с Moonlight.",
