--- a/src_assets/common/assets/web/public/assets/locale/ja.json
+++ b/src_assets/common/assets/web/public/assets/locale/ja.json
@@ -364,7 +364,9 @@
     "wan_encryption_mode": "WAN暗号化モード",
     "wan_encryption_mode_1": "サポートされているクライアントで有効になっています（デフォルト）",
     "wan_encryption_mode_2": "すべてのクライアントに必要です",
-    "wan_encryption_mode_desc": "これは、インターネット経由でストリーミングする際に暗号化がいつ使用されるかを決定します。特に強力なホストやクライアントでは、暗号化によりストリーミングパフォーマンスが低下します。"
+    "wan_encryption_mode_desc": "これは、インターネット経由でストリーミングする際に暗号化がいつ使用されるかを決定します。特に強力なホストやクライアントでは、暗号化によりストリーミングパフォーマンスが低下します。",
+    "close_verify_safe": "安全な検証互換性のある古いクライアント",
+    "close_verify_safe_desc": "古いクライアントはSunshineに接続できない可能性があります。このオプションを無効にするか、クライアントを更新してください"
   },
   "index": {
     "description": "サンシャインはムーンライトのための自己ホストゲームストリームホストです。",
