--- a/src_assets/common/assets/web/public/assets/locale/pt_BR.json
+++ b/src_assets/common/assets/web/public/assets/locale/pt_BR.json
@@ -367,7 +367,9 @@
     "wan_encryption_mode": "Modo de criptografia WAN",
     "wan_encryption_mode_1": "Ativado para clientes compatíveis (padrão)",
     "wan_encryption_mode_2": "Necessário para todos os clientes",
-    "wan_encryption_mode_desc": "Isso determina quando a criptografia será usada durante a transmissão pela Internet. A criptografia pode reduzir o desempenho da transmissão, principalmente em hosts e clientes menos potentes."
+    "wan_encryption_mode_desc": "Isso determina quando a criptografia será usada durante a transmissão pela Internet. A criptografia pode reduzir o desempenho da transmissão, principalmente em hosts e clientes menos potentes.",
+    "close_verify_safe": "Verificação segura compatível com clientes antigos",
+    "close_verify_safe_desc": "Clientes antigos podem não se conectar ao Sunshine, por favor, desative esta opção ou atualize o cliente"
   },
   "index": {
     "description": "O Sunshine é um host de fluxo de jogos auto-hospedado para o Moonlight.",
