--- a/src_assets/common/assets/web/public/assets/locale/ru.json
+++ b/src_assets/common/assets/web/public/assets/locale/ru.json
@@ -364,7 +364,9 @@
     "wan_encryption_mode": "Режим шифрования WAN",
     "wan_encryption_mode_1": "Включено для поддерживаемых клиентов (по умолчанию)",
     "wan_encryption_mode_2": "Требуется для всех клиентов",
-    "wan_encryption_mode_desc": "Определяет, когда будет использоваться шифрование при вещании через Интернет. Шифрование может снизить качество вещания, особенно на более слабых серверах и клиентах."
+    "wan_encryption_mode_desc": "Определяет, когда будет использоваться шифрование при вещании через Интернет. Шифрование может снизить качество вещания, особенно на более слабых серверах и клиентах.",
+    "close_verify_safe": "Безопасная проверка совместима с старыми клиентами",
+    "close_verify_safe_desc": "Старые клиенты могут не подключаться к Sunshine, пожалуйста, отключите этот параметр или обновите клиента"
   },
   "index": {
     "description": "Sunshine - это ваш собственный сервер вещания игр для Moonlight.",
