--- a/src_assets/common/assets/web/public/assets/locale/uk.json
+++ b/src_assets/common/assets/web/public/assets/locale/uk.json
@@ -367,7 +367,9 @@
     "wan_encryption_mode": "Режим шифрування WAN",
     "wan_encryption_mode_1": "Увімкнено для підтримуваних клієнтів (за замовчуванням)",
     "wan_encryption_mode_2": "Обов'язково для всіх клієнтів",
-    "wan_encryption_mode_desc": "Цей параметр визначає, коли буде використовуватися шифрування під час потокового передавання через Інтернет. Шифрування може знизити продуктивність потокового стримінгу, особливо на менш потужних хостах і клієнтах."
+    "wan_encryption_mode_desc": "Цей параметр визначає, коли буде використовуватися шифрування під час потокового передавання через Інтернет. Шифрування може знизити продуктивність потокового стримінгу, особливо на менш потужних хостах і клієнтах.",
+    "close_verify_safe": "Безпечний замість замкненого перевірки",
+    "close_verify_safe_desc": "Старий клієнт може не підтримувати Sunshine, будь ласка, вимкніть цей параметр або оновіть клієнт"
   },
   "index": {
     "description": "Sunshine - це самостійний ігровий стримінговий хостинг для Moonlight.",
