--- a/src_assets/common/assets/web/public/assets/locale/cs.json
+++ b/src_assets/common/assets/web/public/assets/locale/cs.json
@@ -367,7 +367,9 @@
     "wan_encryption_mode": "Režim šifrování WAN",
     "wan_encryption_mode_1": "Povoleno pro podporované klienty (výchozí)",
     "wan_encryption_mode_2": "Vyžadováno pro všechny klienty",
-    "wan_encryption_mode_desc": "Určuje, kdy bude šifrování použito při streamování přes internet. Šifrování může snížit streamovací výkon, zejména u méně výkonných hostitelů a klientů."
+    "wan_encryption_mode_desc": "Určuje, kdy bude šifrování použito při streamování přes internet. Šifrování může snížit streamovací výkon, zejména u méně výkonných hostitelů a klientů.",
+    "close_verify_safe": "Bezpečná ověření kompatibilní s klienty starší",
+    "close_verify_safe_desc": "Starší klienti nemusí být schopni se připojit k Sunshine, prosím zakázat tuto volbu nebo aktualizovat klienta"
   },
   "index": {
     "description": "Sluneční stream je hostitelem pro Měsíční světlo.",
