--- a/src_assets/common/assets/web/public/assets/locale/de.json
+++ b/src_assets/common/assets/web/public/assets/locale/de.json
@@ -364,7 +364,9 @@
     "wan_encryption_mode": "WAN-Verschlüsselungsmodus",
     "wan_encryption_mode_1": "Aktiviert für unterstützte Clients (Standard)",
     "wan_encryption_mode_2": "Benötigt für alle Kunden",
-    "wan_encryption_mode_desc": "Dies legt fest, wann Verschlüsselung beim Streaming über das Internet verwendet wird. Verschlüsselung kann die Streaming-Leistung senken, insbesondere auf weniger leistungsfähigen Hosts und Clients."
+    "wan_encryption_mode_desc": "Dies legt fest, wann Verschlüsselung beim Streaming über das Internet verwendet wird. Verschlüsselung kann die Streaming-Leistung senken, insbesondere auf weniger leistungsfähigen Hosts und Clients.",
+    "close_verify_safe": "Sichere Überprüfung kompatibel mit alten Clients",
+    "close_verify_safe_desc": "Alte Clients können nicht mit Sunshine verbunden werden, bitte deaktivieren Sie diese Option oder aktualisieren Sie den Client"
   },
   "index": {
     "description": "Sunshine ist ein selbst gehosteter Game-Stream-Host für Moonlight.",
