--- a/src_assets/common/assets/web/public/assets/locale/fr.json
+++ b/src_assets/common/assets/web/public/assets/locale/fr.json
@@ -365,7 +365,9 @@
     "wan_encryption_mode": "Mode de chiffrement WAN",
     "wan_encryption_mode_1": "Activé pour les clients pris en charge (par défaut)",
     "wan_encryption_mode_2": "Obligatoire pour tous les clients",
-    "wan_encryption_mode_desc": "Ceci détermine quand le chiffrement sera utilisé lors du streaming par Internet. Le chiffrement peut réduire les performances de streaming, en particulier sur les hôtes et clients moins puissants."
+    "wan_encryption_mode_desc": "Ceci détermine quand le chiffrement sera utilisé lors du streaming par Internet. Le chiffrement peut réduire les performances de streaming, en particulier sur les hôtes et clients moins puissants.",
+    "close_verify_safe": "Vérification sécurisée compatible avec les anciens clients",
+    "close_verify_safe_desc": "Les anciens clients peuvent ne pas pouvoir se connecter à Sunshine, veuillez désactiver cette option ou mettre à jour le client"
   },
   "index": {
     "description": "Sunshine est un serveur de streaming auto-hébergé pour Moonlight.",
