--- a/src_assets/common/assets/web/public/assets/locale/it.json
+++ b/src_assets/common/assets/web/public/assets/locale/it.json
@@ -364,7 +364,9 @@
     "wan_encryption_mode": "Modalità Crittografia WAN",
     "wan_encryption_mode_1": "Abilitato per i client supportati (predefinito)",
     "wan_encryption_mode_2": "Obbligatorio per tutti i client",
-    "wan_encryption_mode_desc": "Questo determina quando la crittografia sarà utilizzata durante lo streaming su Internet. La crittografia può ridurre le prestazioni di streaming, in particolare su host e client meno potenti."
+    "wan_encryption_mode_desc": "Questo determina quando la crittografia sarà utilizzata durante lo streaming su Internet. La crittografia può ridurre le prestazioni di streaming, in particolare su host e client meno potenti.",
+    "close_verify_safe": "Verifica sicura compatibile con client vecchi",
+    "close_verify_safe_desc": "Client vecchi potrebbero non essere in grado di connettersi a Sunshine, si prega di disabilitare questa opzione o aggiornare il client"
   },
   "index": {
     "description": "Sunshine è una piattaforma autonoma di game stream per Moonlight.",
