--- a/src_assets/common/assets/web/public/assets/locale/pl.json
+++ b/src_assets/common/assets/web/public/assets/locale/pl.json
@@ -367,7 +367,9 @@
     "wan_encryption_mode": "Tryb szyfrowania WAN",
     "wan_encryption_mode_1": "Włączone dla obsługiwanych klientów (domyślnie)",
     "wan_encryption_mode_2": "Wymagane dla wszystkich klientów",
-    "wan_encryption_mode_desc": "Określa, kiedy szyfrowanie będzie używane podczas przesyłania strumieniowego przez Internet. Szyfrowanie może zmniejszyć wydajność przesyłania strumieniowego, szczególnie na mniej wydajnych hostach i klientach."
+    "wan_encryption_mode_desc": "Określa, kiedy szyfrowanie będzie używane podczas przesyłania strumieniowego przez Internet. Szyfrowanie może zmniejszyć wydajność przesyłania strumieniowego, szczególnie na mniej wydajnych hostach i klientach.",
+    "close_verify_safe": "Bezpieczne weryfikowanie zgodne z starszymi klientami",
+    "close_verify_safe_desc": "Starsze klienty mogą nie łączyć się z Sunshine, proszę wyłączyć tę opcję lub zaktualizować klienta"
   },
   "index": {
     "description": "Sunshine jest samodzielnym hostem strumienia gry dla Moonlight.",
