add:【安全整改】可配置sunshine局域网发现功能 (#180)

--- a/src_assets/common/assets/web/public/assets/locale/bg.json
+++ b/src_assets/common/assets/web/public/assets/locale/bg.json
@@ -369,7 +369,9 @@
     "wan_encryption_mode_2": "Задължително за всички клиенти",
     "wan_encryption_mode_desc": "Това определя дали да се използва шифроване при излъчване през Интернет. Шифроването може да намали производителността на излъчването, особено при не особено мощни сървъри и клиенти.",
     "close_verify_safe": "Безопасно удостоверяване, съвместимо с стари клиенти",
-    "close_verify_safe_desc": "Старите клиенти може да не могат да се свържат с Sunshine, моля, изключете тази опция или актуализирайте клиента"
+    "close_verify_safe_desc": "Старите клиенти може да не могат да се свържат с Sunshine, моля, изключете тази опция или актуализирайте клиента",
+    "mdns_broadcast": "Намиране на този компютър в локалната мрежа",
+    "mdns_broadcast_desc": "Ако е активирана тази опция, Sunshine ще позволи на други устройства да намират този компютър автоматично. Moonlight трябва да бъде настроен да намира този компютър автоматично в локалната мрежа."
   },
   "index": {
     "description": "Sunshine е сървър за собствено поточно предаване на игри, предназначен за ползване с Moonlight.",
