--- a/src_assets/common/assets/web/public/assets/locale/ja.json
+++ b/src_assets/common/assets/web/public/assets/locale/ja.json
@@ -366,7 +366,9 @@
     "wan_encryption_mode_2": "すべてのクライアントに必要です",
     "wan_encryption_mode_desc": "これは、インターネット経由でストリーミングする際に暗号化がいつ使用されるかを決定します。特に強力なホストやクライアントでは、暗号化によりストリーミングパフォーマンスが低下します。",
     "close_verify_safe": "安全な検証互換性のある古いクライアント",
-    "close_verify_safe_desc": "古いクライアントはSunshineに接続できない可能性があります。このオプションを無効にするか、クライアントを更新してください"
+    "close_verify_safe_desc": "古いクライアントはSunshineに接続できない可能性があります。このオプションを無効にするか、クライアントを更新してください",
+    "mdns_broadcast": "このコンピュータをローカルネットワークで見つける",
+    "mdns_broadcast_desc": "このオプションを有効にすると、Sunshineは自動的にこのコンピュータを見つけることができます。Moonlightもローカルネットワークでこのコンピュータを自動的に見つけるように設定する必要があります。"
   },
   "index": {
     "description": "サンシャインはムーンライトのための自己ホストゲームストリームホストです。",
