--- a/src_assets/common/assets/web/public/assets/locale/ru.json
+++ b/src_assets/common/assets/web/public/assets/locale/ru.json
@@ -366,7 +366,9 @@
     "wan_encryption_mode_2": "Требуется для всех клиентов",
     "wan_encryption_mode_desc": "Определяет, когда будет использоваться шифрование при вещании через Интернет. Шифрование может снизить качество вещания, особенно на более слабых серверах и клиентах.",
     "close_verify_safe": "Безопасная проверка совместима с старыми клиентами",
-    "close_verify_safe_desc": "Старые клиенты могут не подключаться к Sunshine, пожалуйста, отключите этот параметр или обновите клиента"
+    "close_verify_safe_desc": "Старые клиенты могут не подключаться к Sunshine, пожалуйста, отключите этот параметр или обновите клиента",
+    "mdns_broadcast": "Автоматическое обнаружение компьютера в локальной сети",
+    "mdns_broadcast_desc": "Включение этой опции позволит автоматически обнаруживать компьютер в локальной сети, если Moonlight настроен на автоматическое обнаружение компьютера в локальной сети"
   },
   "index": {
     "description": "Sunshine - это ваш собственный сервер вещания игр для Moonlight.",
