--- a/src_assets/common/assets/web/public/assets/locale/uk.json
+++ b/src_assets/common/assets/web/public/assets/locale/uk.json
@@ -369,7 +369,9 @@
     "wan_encryption_mode_2": "Обов'язково для всіх клієнтів",
     "wan_encryption_mode_desc": "Цей параметр визначає, коли буде використовуватися шифрування під час потокового передавання через Інтернет. Шифрування може знизити продуктивність потокового стримінгу, особливо на менш потужних хостах і клієнтах.",
     "close_verify_safe": "Безпечний замість замкненого перевірки",
-    "close_verify_safe_desc": "Старий клієнт може не підтримувати Sunshine, будь ласка, вимкніть цей параметр або оновіть клієнт"
+    "close_verify_safe_desc": "Старий клієнт може не підтримувати Sunshine, будь ласка, вимкніть цей параметр або оновіть клієнт",
+    "mdns_broadcast": "Автоматичне виявлення комп'ютера в локальній мережі",
+    "mdns_broadcast_desc": "Увімкнення цієї опції дозволяє автоматично виявляти комп'ютер в локальній мережі, якщо Moonlight налаштований на автоматичне виявлення комп'ютера в локальній мережі"
   },
   "index": {
     "description": "Sunshine - це самостійний ігровий стримінговий хостинг для Moonlight.",
