--- a/src_assets/common/assets/web/public/assets/locale/pt.json
+++ b/src_assets/common/assets/web/public/assets/locale/pt.json
@@ -366,7 +366,9 @@
     "wan_encryption_mode_2": "Obrigatório para todos os clientes",
     "wan_encryption_mode_desc": "Isso determina quando a criptografia será usada no streaming pela internet. A criptografia pode reduzir o desempenho do streaming, particularmente em hosts e clientes menos poderosos.",
     "close_verify_safe": "Verificação segura compatível com clientes antigos",
-    "close_verify_safe_desc": "Clientes antigos podem não se conectar ao Sunshine, por favor, desative esta opção ou atualize o cliente"
+    "close_verify_safe_desc": "Clientes antigos podem não se conectar ao Sunshine, por favor, desative esta opção ou atualize o cliente",
+    "mdns_broadcast": "Encontrar este computador na rede local",
+    "mdns_broadcast_desc": "Se esta opção estiver ativada, o Sunshine permitirá que outros dispositivos encontrem este computador automaticamente. O Moonlight deve ser configurado para encontrar este computador automaticamente na rede local."
   },
   "index": {
     "description": "O sol é um anfitrião de jogos auto-hospedado para o Moonlight.",
