docs: 更新说明解析与一些文案调整 (#218)

--- a/src_assets/common/assets/web/public/assets/locale/en.json
+++ b/src_assets/common/assets/web/public/assets/locale/en.json
@@ -377,7 +377,7 @@
     "startup_errors": "<b>Attention!</b> Sunshine detected these errors during startup. We <b>STRONGLY RECOMMEND</b> fixing them before streaming.",
     "version_dirty": "Thank you for helping to make Sunshine a better software!",
     "version_latest": "You are running the latest version of Sunshine",
-    "welcome": "Hello, Sunshine!"
+    "welcome": "Hello, Sunshine-Foundation!"
   },
   "navbar": {
     "applications": "Applications",
