--- a/src_assets/common/assets/web/public/assets/locale/zh.json
+++ b/src_assets/common/assets/web/public/assets/locale/zh.json
@@ -370,7 +370,7 @@
     "startup_errors": "<b>请注意！</b>Sunshine 在启动过程中检测到这些错误。我们<b>强烈建议</b>您在串流之前修复这些错误。",
     "version_dirty": "感谢您的帮助，让 Sunshine 变得更好！",
     "version_latest": "您正在运行最新版本的 Sunshine",
-    "welcome": "你好，Sunshine！"
+    "welcome": "你好，Sunshine-Foundation！"
   },
   "navbar": {
     "applications": "应用程序",
