--- a/src_assets/common/assets/web/public/assets/locale/zh.json
+++ b/src_assets/common/assets/web/public/assets/locale/zh.json
@@ -191,8 +191,13 @@
     "gamepad_auto": "自动选择选项",
     "gamepad_desc": "选择要在主机上模拟的游戏手柄类型",
     "gamepad_ds4": "DS4 (PS4)",
+    "gamepad_ds4_manual": "DS4 选择选项",
     "gamepad_ds5": "DS5 (PS5)",
     "gamepad_switch": "Nintendo Pro (Switch)",
+    "enable_dsu_server": "启用DSU服务器",
+    "enable_dsu_server_desc": "启用后，Sunshine将作为DSU服务器接收客户端连接并发送运动数据",
+    "dsu_server_port": "DSU服务器端口",
+    "dsu_server_port_desc": "DSU服务器的监听端口（默认26760）。Sunshine将作为DSU服务器接收客户端连接并发送运动数据。在你的客户端(Yuzu,Ryujinx等)中启用DSU服务器并设置DSU服务器地址(127.0.0.1)和端口(26760)",
     "gamepad_manual": "DS4 手柄手动配置选项",
     "gamepad_x360": "X360 (Xbox 360)",
     "gamepad_xone": "Xone (Xbox O1)",
