--- a/src_assets/common/assets/web/public/assets/locale/en_US.json
+++ b/src_assets/common/assets/web/public/assets/locale/en_US.json
@@ -209,8 +209,13 @@
     "gamepad_auto": "Automatic selection options",
     "gamepad_desc": "Choose which type of gamepad to emulate on the host",
     "gamepad_ds4": "DS4 (PS4)",
+    "gamepad_ds4_manual": "DS4 Manual Options",
     "gamepad_ds5": "DS5 (PS5)",
     "gamepad_switch": "Nintendo Pro (Switch)",
+    "enable_dsu_server": "Enable DSU Server",
+    "enable_dsu_server_desc": "Enable DSU server to receive client connections and send motion data",
+    "dsu_server_port": "DSU Server Port",
+    "dsu_server_port_desc": "DSU server listening port (default 26760). Sunshine will act as a DSU server to receive client connections and send motion data. Enable DSU server in your client(Yuzu,Ryujinx etc.) and set DSU server address(127.0.0.1) and port(26760)",
     "gamepad_manual": "Manual DS4 options",
     "gamepad_x360": "X360 (Xbox 360)",
     "gamepad_xone": "XOne (Xbox One)",
